--- a/microservies/docker-compose.yml
+++ b/microservies/docker-compose.yml
@@ -12,3 +12,8 @@ services:
     build:
       context: ./TacoTruck.Customer
       dockerfile: Dockerfile
+
+  tacotruck.web:
+    image: taco_truck_web:test
+    ports:
+      - "4200:4200"
